Sorting out all layouts. Organising dimens and strings files

--- a/4-application/app/src/main/res/layout/activity_maps.xml
+++ b/4-application/app/src/main/res/layout/activity_maps.xml
@@ -16,10 +16,10 @@
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/back_btn_margin"
-        android:layout_marginTop="@dimen/back_btn_margin"
+        android:layout_marginStart="@dimen/ma_back_btn_margin"
+        android:layout_marginTop="@dimen/ma_back_btn_margin"
         android:background="@drawable/back_btn_corners"
-        android:text="@string/back_tv"
+        android:text="@string/ma_back_btn_txt"
         android:textColor="@color/chinese_white"
         android:textAllCaps="false"
         android:drawableLeft="@drawable/ic_arrow_back"
@@ -31,20 +31,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/sv_marginTop"
+        android:layout_marginTop="@dimen/ma_sv_margin_top"
         android:background="@drawable/search_background"
         android:iconifiedByDefault="false"
-        android:queryHint="@string/sv_hint"
+        android:queryHint="@string/ma_sv_hint"
         map:layout_constraintEnd_toEndOf="parent"
-        map:layout_constraintHorizontal_bias="0.495"
         map:layout_constraintStart_toStartOf="parent"
-        map:layout_constraintTop_toTopOf="parent" />
+        map:layout_constraintTop_toBottomOf="@+id/back_button" />
 
     <TextView
         android:id="@+id/error_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/error_tv_marginTop"
+        android:layout_marginTop="@dimen/ma_error_tv_margin_top"
         android:background="@drawable/error_text_corners"
         android:textColor="@color/error"
         map:layout_constraintEnd_toEndOf="parent"
@@ -55,12 +54,12 @@
         android:id="@+id/current_location_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/current_location_margin"
+        android:layout_marginBottom="@dimen/ma_current_location_margin"
         android:background="@drawable/current_location_corners"
-        android:text="@string/current_location_txt"
+        android:text="@string/ma_current_location_txt"
         android:textAllCaps="false"
         android:textColor="@color/almost_black"
-        android:drawableLeft="@drawable/ic_gps"
+        android:drawableStart="@drawable/ic_gps"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
         map:layout_constraintStart_toStartOf="parent" />
