--- a/4-application/app/src/main/res/layout/fragment_dua.xml
+++ b/4-application/app/src/main/res/layout/fragment_dua.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/df_constraint_padding"
     tools:context=".fragments.DuaFragment">
 
     <TextView
         android:id="@+id/dua_fragment_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_top"
+        android:layout_marginTop="@dimen/df_margin_top"
         android:text="@string/dua_nav_title"
-        android:textSize="@dimen/current_prayer_txt_size"
+        android:textSize="@dimen/df_txt_size"
         android:textColor="@color/yellow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,11 +23,9 @@
         android:id="@+id/dua_title_sv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/list_view_margin_edge"
-        android:layout_marginBottom="@dimen/list_view_margin_edge"
         android:background="@drawable/search_background"
         android:iconifiedByDefault="false"
-        android:queryHint="@string/sv_dua_hint"
+        android:queryHint="@string/df_sv_hint"
         app:layout_constraintBottom_toTopOf="@+id/dua_lv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,13 +34,11 @@
     <ListView
         android:id="@+id/dua_lv"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dua_lv_height"
-        android:layout_marginStart="@dimen/list_view_margin_edge"
-        android:layout_marginTop="@dimen/margin_top"
-        android:layout_marginEnd="@dimen/list_view_margin_edge"
-        android:layout_marginBottom="@dimen/lv_margin_bottom"
+        android:layout_height="@dimen/df_lv_height"
+        android:layout_marginTop="@dimen/df_margin_top"
+        android:paddingBottom="@dimen/df_lv_padding_bottom"
         android:divider="@color/transparent"
-        android:dividerHeight="@dimen/lv_divider_height"
+        android:dividerHeight="@dimen/df_lv_divider_height"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
