--- a/4-application/app/src/main/res/layout/fragment_dua_detail.xml
+++ b/4-application/app/src/main/res/layout/fragment_dua_detail.xml
@@ -9,17 +9,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/constraint_padding_bottom">
+        android:padding="@dimen/ddf_constraint_padding">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/dua_back_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dua_detail_tv_margin_top"
-            android:layout_marginTop="@dimen/dua_detail_tv_margin_top"
             android:background="@drawable/back_btn_corners"
             android:drawableLeft="@drawable/ic_arrow_back"
-            android:text="@string/back_tv"
+            android:text="@string/ddf_back_btn_txt"
             android:textAllCaps="false"
             android:textColor="@color/chinese_white"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,11 +27,11 @@
             android:id="@+id/dua_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_top"
+            android:layout_marginTop="@dimen/ddf_margin_top"
             android:text="dua title"
             android:textAlignment="center"
             android:textColor="@color/yellow"
-            android:textSize="@dimen/current_prayer_txt_size"
+            android:textSize="@dimen/ddf_title_txt_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dua_back_btn" />
@@ -42,9 +40,7 @@
             android:id="@+id/arabic_constraint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/list_view_margin_edge"
-            android:layout_marginTop="@dimen/dua_item_margin_top"
-            android:layout_marginEnd="@dimen/list_view_margin_edge"
+            android:layout_marginTop="@dimen/ddf_item_margin_top"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dua_title">
@@ -53,8 +49,7 @@
                 android:id="@+id/arabic_heading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dua_detail_tv_margin_top"
-                android:text="@string/arabic_tv"
+                android:text="@string/ddf_arabic_tv"
                 android:textColor="@color/chinese_white"
                 android:textSize="@dimen/txt_size"
                 app:layout_constraintBottom_toTopOf="@+id/arabic_section"
@@ -65,11 +60,11 @@
                 android:id="@+id/arabic_section"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dua_detail_tv_margin_top"
+                android:layout_marginTop="@dimen/ddf_tv_margin_top"
                 android:background="@drawable/listview_corners"
                 android:textAlignment="center"
                 android:textColor="@color/almost_black"
-                android:textSize="@dimen/dua_item_text_size"
+                android:textSize="@dimen/ddf_item_txt_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/arabic_heading" />
@@ -79,9 +74,7 @@
             android:id="@+id/transliteration_constraint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/list_view_margin_edge"
-            android:layout_marginTop="@dimen/dua_item_margin_top"
-            android:layout_marginEnd="@dimen/list_view_margin_edge"
+            android:layout_marginTop="@dimen/ddf_item_margin_top"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/arabic_constraint">
@@ -90,8 +83,7 @@
                 android:id="@+id/transliteration_heading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dua_detail_tv_margin_top"
-                android:text="@string/transliteration_tv"
+                android:text="@string/ddf_transliteration_tv"
                 android:textColor="@color/chinese_white"
                 android:textSize="@dimen/txt_size"
                 app:layout_constraintBottom_toTopOf="@+id/transliteration_section"
@@ -102,11 +94,11 @@
                 android:id="@+id/transliteration_section"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dua_detail_tv_margin_top"
+                android:layout_marginTop="@dimen/ddf_tv_margin_top"
                 android:background="@drawable/listview_corners"
                 android:textAlignment="center"
                 android:textColor="@color/almost_black"
-                android:textSize="@dimen/dua_item_text_size"
+                android:textSize="@dimen/ddf_item_txt_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/transliteration_heading" />
@@ -116,9 +108,8 @@
             android:id="@+id/meaning_constraint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/list_view_margin_edge"
-            android:layout_marginTop="@dimen/dua_item_margin_top"
-            android:layout_marginEnd="@dimen/list_view_margin_edge"
+            android:layout_marginTop="@dimen/ddf_item_margin_top"
+            android:paddingBottom="@dimen/ddf_padding_bottom"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -128,8 +119,7 @@
                 android:id="@+id/meaning_heading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dua_detail_tv_margin_top"
-                android:text="@string/meaning_tv"
+                android:text="@string/ddf_meaning_tv"
                 android:textColor="@color/chinese_white"
                 android:textSize="@dimen/txt_size"
                 app:layout_constraintBottom_toTopOf="@+id/meaning_section"
@@ -140,11 +130,11 @@
                 android:id="@+id/meaning_section"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dua_detail_tv_margin_top"
+                android:layout_marginTop="@dimen/ddf_tv_margin_top"
                 android:background="@drawable/listview_corners"
                 android:textAlignment="center"
                 android:textColor="@color/almost_black"
-                android:textSize="@dimen/dua_item_text_size"
+                android:textSize="@dimen/ddf_item_txt_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/meaning_heading" />
