--- a/4-application/app/src/main/res/layout/fragment_tracker.xml
+++ b/4-application/app/src/main/res/layout/fragment_tracker.xml
@@ -8,7 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:padding="@dimen/tf_constraint_padding">
 
         <CalendarView
             android:id="@+id/calendar"
@@ -32,10 +33,8 @@
             android:id="@+id/fajr_checkbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/list_view_margin_edge"
-            android:layout_marginTop="@dimen/lv_margin_top"
-            android:layout_marginEnd="@dimen/list_view_margin_edge"
-            android:text="@string/fajr_text"
+            android:layout_marginTop="@dimen/tf_margin_top"
+            android:text="@string/tf_fajr_text"
             android:textSize="@dimen/txt_size"
             android:textColor="@color/almost_black"
             android:background="@drawable/listview_corners"
@@ -47,10 +46,8 @@
             android:id="@+id/dhuhr_checkbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/lv_divider_height"
-            android:layout_marginStart="@dimen/list_view_margin_edge"
-            android:layout_marginEnd="@dimen/list_view_margin_edge"
-            android:text="@string/dhuhr_text"
+            android:layout_marginTop="@dimen/tf_margin_top"
+            android:text="@string/tf_dhuhr_text"
             android:textSize="@dimen/txt_size"
             android:textColor="@color/almost_black"
             android:background="@drawable/listview_corners"
@@ -62,10 +59,8 @@
             android:id="@+id/asr_checkbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/lv_divider_height"
-            android:layout_marginStart="@dimen/list_view_margin_edge"
-            android:layout_marginEnd="@dimen/list_view_margin_edge"
-            android:text="@string/asr_text"
+            android:layout_marginTop="@dimen/tf_margin_top"
+            android:text="@string/tf_asr_text"
             android:textSize="@dimen/txt_size"
             android:textColor="@color/almost_black"
             android:background="@drawable/listview_corners"
@@ -77,10 +72,8 @@
             android:id="@+id/maghrib_checkbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/lv_divider_height"
-            android:layout_marginStart="@dimen/list_view_margin_edge"
-            android:layout_marginEnd="@dimen/list_view_margin_edge"
-            android:text="@string/maghrib_text"
+            android:layout_marginTop="@dimen/tf_margin_top"
+            android:text="@string/tf_maghrib_text"
             android:textSize="@dimen/txt_size"
             android:textColor="@color/almost_black"
             android:background="@drawable/listview_corners"
@@ -92,12 +85,10 @@
             android:id="@+id/isha_checkbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/list_view_margin_edge"
-            android:layout_marginTop="@dimen/lv_divider_height"
-            android:layout_marginEnd="@dimen/list_view_margin_edge"
-            android:layout_marginBottom="@dimen/margin_top"
+            android:layout_marginTop="@dimen/tf_margin_top"
+            android:layout_marginBottom="@dimen/tf_margin_bottom"
             android:background="@drawable/listview_corners"
-            android:text="@string/isha_text"
+            android:text="@string/tf_isha_text"
             android:textColor="@color/almost_black"
             android:textSize="@dimen/txt_size"
             app:layout_constraintBottom_toBottomOf="parent"
