--- a/4-application/app/src/main/res/layout/fragment_loading.xml
+++ b/4-application/app/src/main/res/layout/fragment_loading.xml
@@ -9,8 +9,8 @@
     <ProgressBar
         android:id="@+id/loading_widget"
         style="?android:attr/progressBarStyle"
-        android:layout_width="@dimen/loading_size"
-        android:layout_height="@dimen/loading_size"
+        android:layout_width="@dimen/lf_size"
+        android:layout_height="@dimen/lf_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
