--- a/4-application/app/src/main/res/layout/dua_lv_adapter.xml
+++ b/4-application/app/src/main/res/layout/dua_lv_adapter.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:text="dua title"
         android:textColor="@color/almost_black"
-        android:textSize="@dimen/lv_items_text_size"
+        android:textSize="@dimen/dlva_items_txt_size"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
