--- a/4-application/app/src/main/res/layout/prayer_listview_adapter.xml
+++ b/4-application/app/src/main/res/layout/prayer_listview_adapter.xml
@@ -11,10 +11,10 @@
         android:id="@+id/prayer_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/lv_items_margin"
-        android:layout_marginTop="@dimen/lv_items_margin"
-        android:layout_marginBottom="@dimen/lv_items_margin"
-        android:textSize="@dimen/lv_items_text_size"
+        android:layout_marginStart="@dimen/plva_items_margin"
+        android:layout_marginTop="@dimen/plva_items_margin"
+        android:layout_marginBottom="@dimen/plva_items_margin"
+        android:textSize="@dimen/plva_txt_size"
         android:textColor="@color/almost_black"
         android:text="prayer name"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,10 +25,10 @@
         android:id="@+id/prayer_time_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/lv_items_margin"
-        android:layout_marginEnd="@dimen/lv_items_margin"
-        android:layout_marginBottom="@dimen/lv_items_margin"
-        android:textSize="@dimen/lv_items_text_size"
+        android:layout_marginTop="@dimen/plva_items_margin"
+        android:layout_marginEnd="@dimen/plva_items_margin"
+        android:layout_marginBottom="@dimen/plva_items_margin"
+        android:textSize="@dimen/plva_txt_size"
         android:textColor="@color/almost_black"
         android:text="prayer time"
         app:layout_constraintBottom_toBottomOf="parent"
