--- a/4-application/app/src/main/res/layout/fragment_qibla.xml
+++ b/4-application/app/src/main/res/layout/fragment_qibla.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/qf_location_txt_margin_start"
-            android:text="@string/location_txt"
+            android:text="@string/qf_location_txt"
             android:textSize="@dimen/qf_location_txt_size"
             android:textColor="@color/chinese_white"
             app:layout_constraintBottom_toTopOf="@+id/qf_location_name"
@@ -51,11 +51,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/qf_location_constraint" />
 
+    <RadioButton
+        android:id="@+id/qf_radio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/qf_radio_margin_bottom"
+        android:layout_marginStart="@dimen/qf_radio_margin_start"
+        android:buttonTint="@color/yellow"
+        android:checked="true"
+        android:clickable="false"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/qf_degree"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/qf_degree"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/chinese_white"
         android:layout_marginBottom="@dimen/qf_degree_tv_margin_bottom"
         app:layout_constraintBottom_toTopOf="@+id/qibla_compass"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,5 +85,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/qf_location_constraint" />
+
+    <TextView
+        android:id="@+id/qf_facing_qibla_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/qf_facing_qibla_txt_margin_top"
+        android:text="@string/qf_facing_qibla"
+        android:textSize="@dimen/qf_facing_qibla_txt_size"
+        android:textAlignment="center"
+        android:textColor="@color/yellow"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/qibla_compass" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
