--- a/4-application/app/src/main/res/layout/fragment_qibla.xml
+++ b/4-application/app/src/main/res/layout/fragment_qibla.xml
@@ -86,6 +86,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/qf_location_constraint" />
 
+    <ImageView
+        android:id="@+id/qf_direction_needle"
+        android:layout_width="@dimen/qf_needle_width"
+        android:layout_height="wrap_content"
+        android:src="@drawable/qibla_direction_needle"
+        app:layout_constraintBottom_toBottomOf="@id/qibla_compass"
+        app:layout_constraintEnd_toEndOf="@id/qibla_compass"
+        app:layout_constraintStart_toStartOf="@id/qibla_compass"
+        app:layout_constraintTop_toBottomOf="@+id/qf_degree" />
+
     <TextView
         android:id="@+id/qf_facing_qibla_txt"
         android:layout_width="wrap_content"
